shree-seeds-fertilizers/shree-seeds-fertilizers/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shree-seeds
  namespace: shree-seeds
spec:
  selector:
    app: shree-seeds
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
